Band-aid fix for a major problem: Bill ids have been created too short, leading to overflow of type integer when creating new bills. TEMP FIX: any bill with a bill number higher than 9999 gets a proper size id, fixing overflow. BUT now bill ids can be of form CCC_N_XXXX or CCC_N_XXXXX...
also some small CSS changes

--- a/USQuery/app/static/app/content/site.css
+++ b/USQuery/app/static/app/content/site.css
@@ -13,6 +13,11 @@
     color: rgb(250,250,250);
 }
 
+.dark-2 {
+    background-color: rgb(35,35,35);
+    color: rgb(250,250,250);
+}
+
 .block-0 {
     background-color: rgb(139,120,109);
     color: rgb(250,250,250);
@@ -72,7 +77,8 @@ li.rep {
 
 li.ind {
     background-color: rgb(200,200,200);
-    color: rgb(250,250,250);
+    color: rgb(50,50,50);
+    border-color: rgb(0,0,0);
 }
 
 li.lib {
@@ -83,6 +89,9 @@ li.lib {
 li.grn {
     background-color: rgb(11,137,11);
     color: rgb(250,250,250);
+}
+li {
+    border-color : rgb(200,200,200);
 }
 
 
